fixed general spacing issues with grid

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,12 +9,13 @@ html {
 
 h1 {
   font-weight: 700;
-  font-size: 32pt;
+  font-size: 30pt;
 }
 h2 {
   font-weight: 700;
   font-size: 26pt;
 }
+
 h3 {
   font-size: 22pt;
 }
@@ -33,9 +34,10 @@ p {
   background-color: $button-red;
   color: white;
   border: none;
-  font-weight: 600;
-  padding: 1.25em;
+  font-weight: 700;
+  padding: 1em;
   margin: 1.5em 0;
+  font-size: 15pt;
 }
 
 .main-grid {
@@ -78,6 +80,7 @@ p {
     background-size: auto 55%;
     background-attachment: fixed;
     background-position: center top;
+    margin-bottom: 0.5em;
   }
   .hero-text {
     padding: 0 1em;
@@ -207,6 +210,13 @@ header {
   display: none;
 }
 
+//bigger phone
+@media (min-width: 360px) {
+  h1 {
+    font-size: 32pt;
+  }
+}
+
 //tablet
 @media (min-width: 768px) {
   h1 {
@@ -295,7 +305,7 @@ header {
   #skills {
     .icon-grid {
       grid-template-columns: 1fr 1fr;
-      gap: 2rem;
+      gap: 1em;
     }
     #dev-icons {
       grid-row: 2/3;
@@ -317,6 +327,7 @@ header {
 
   #certificates {
     display: grid;
+    gap: 3em 1em;
     h3 {
       grid-column: 2/10;
       font-size: 25pt;
@@ -358,7 +369,18 @@ header {
     gap: 4em 2em;
   }
 
+  .contact-button {
+    font-size: 20pt;
+  }
+
+  #skills {
+    .icon-grid {
+      gap: 2em;
+    }
+  }
+
   #certificates {
+    gap: 4em 2em;
     h3 {
       font-size: 40pt;
     }
